docs: added scrollbar-gutter to avoid layout shift on chrome

--- a/docs/src/app.css
+++ b/docs/src/app.css
@@ -4,18 +4,19 @@
 @source "../node_modules/@sveltique/components";
 @import "./theme.css";
 
+html,
 body {
-	width: 100%;
-	height: 100vh;
-	scroll-behavior: smooth;
-	font-family: "Nunito", sans-serif;
-	font-optical-sizing: auto;
+    width: 100%;
+    height: 100vh;
+    scrollbar-gutter: stable;
+    font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
 }
 
 .dark body {
-	background-color: oklch(20.5% 0 0);
+    background-color: oklch(20.5% 0 0);
 }
 
 .dark {
-	color: oklch(96.7% 0.001 286.375);
+    color: oklch(96.7% 0.001 286.375);
 }
